# sysops-agent

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config-docker.toml
deploy/: config.toml  install.sh  sysops-agent.service  uninstall.sh
docker/: Dockerfile.centos7  Dockerfile.rocky8  Dockerfile.rocky9  Dockerfile.ubuntu2204  Dockerfile.ubuntu2404
docs/: ALERTING.md  BUILD-TEST-RESULTS.md  CONFIGURATION.md  DEPLOYMENT.md  DESIGN.md  METRICS.md
scripts/: build-test-all.sh
src/: config.rs  inventory.rs  lib.rs  log_analyzer.rs  main.rs  nats_handlers.rs  nats_publisher.rs  storage.rs
src/alerter/: discord.rs  mod.rs  slack.rs  webhook.rs
src/analyzer/: mod.rs  threshold.rs  trend.rs  zscore.rs
src/collector/: cpu.rs  disk.rs  fd.rs  memory.rs  mod.rs  network.rs  process.rs
