[package]
name = "sysops-agent"
version = "0.1.0"
edition = "2021"
authors = ["ecmoce"]
description = "경량 시스템 모니터링 에이전트 - Lightweight system monitoring agent"
license = "MIT"
repository = "https://github.com/ecmoce/sysops-agent"
readme = "README.md"
keywords = ["monitoring", "system", "agent", "linux", "anomaly-detection"]
categories = ["command-line-utilities"]

[features]
default = ["tls-rustls"]
prometheus = ["dep:prometheus", "dep:hyper", "dep:hyper-util"]
sqlite = ["dep:rusqlite"]
tls-native = ["reqwest/native-tls"]
tls-rustls = ["reqwest/rustls-tls"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (for webhook alerting)
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# Linux-specific
nix = { version = "0.29", features = ["fs", "process", "signal"] }
procfs = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
smallvec = { version = "1", features = ["serde"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
notify = "6"  # file watcher for config reload
hostname = "0.4"

# Optional: Prometheus metrics endpoint
prometheus = { version = "0.13", optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }

# Optional: SQLite persistence
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Email (SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

[profile.release]
opt-level = "s"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Smaller binary
strip = true           # Strip debug symbols
